# etcion

./: .coverage  CHANGELOG.md  CLAUDE.md  README.md  mkdocs.yml  petco.xml  pyproject.toml
.claude/agents/: archimate-librarian.md  archimate-product-owner.md  python-package-architect.md  (+2 more)
assets/: archimate-spec-3.2.md
docs/: BACKLOG-Phase-2.md  BACKLOG-Phase-3.md  BACKLOG.md  REQUIREMENTS.md  changelog.md  getting-started.md  index.md  releasing.md
examples/: from_archi.archimate  model_diff.py  pet_shop-from_archi.xml  pet_shop-roundtrip.xml  pet_shop.py  pet_shop.xml  profile_extension.py  query_builder.py  quick_start.py  test_archi_roundtrip.py  validation_demo.py  viewpoint_filter.py  xml_roundtrip.py
scripts/: generate_adr_index.py  generate_permission_matrix.py  merge_tests.py
site/: 404.html  index.html  objects.inv
test/: conftest.py  test_builder.py  test_comparison.py  test_conformance.py  test_conformance_profile.py  test_docstring_coverage.py  test_enums.py  test_exports.py  test_feat012_structure.py  test_feat013_structure.py  test_feat021_concept.py  test_feat022_element.py  test_feat023_relationship.py  test_feat024_connector.py  test_feat026_model.py  test_feat031_layer.py  test_feat032_aspect.py  test_feat033_notation.py  test_feat034_classification.py  test_feat035_nesting.py  test_feat041_structure_elements.py  test_feat042_behavior_elements.py  test_feat043_motivation_composite.py  test_feat044_grouping.py  test_feat045_location.py  test_feat046_validation.py  test_feat0510_derivation.py  test_feat0511_permissions.py  test_feat051_relationship_category.py  test_feat052_structural.py  test_feat053_serving.py  test_feat054_access.py  test_feat055_influence.py  test_feat056_association.py  test_feat057_dynamic.py  test_feat058_specialization.py  test_feat059_junction.py  test_feat061_strategy_abcs.py  test_feat062_resource.py  test_feat063_strategy_behavior.py  (+78 more)
(+378 files in other folders)
