[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyarchi"
version = "0.1.0"
description = "A Python library implementing the ArchiMate 3.2 metamodel"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "pyarchi contributors" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
xml = ["lxml>=5.0,<6.0"]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "pydantic>=2.0,<3.0",
    "ruff>=0.4",
    "lxml>=5.0,<6.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyarchi"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external resources",
]

[tool.ruff]
target-version = "py312"
src = ["src", "test"]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "I", "ANN", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"test/**" = ["ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "test.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "lxml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyarchi.serialization.xml"
disable_error_code = ["import-untyped"]
